--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,5 @@ export(login_UI)
 export(login_server)
 export(password_reset_UI)
 export(register_UI)
-import(dplyr)
-import(emayili)
-import(googlesheets4)
-import(scrypt)
 import(shiny)
+importFrom(dplyr,"%>%")
