--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(login_server)
 export(password_reset_UI)
 export(register_UI)
 export(use_language)
+import(DBI)
+import(RSQLite)
 import(shiny)
 importFrom(R6,R6Class)
 importFrom(utils,modifyList)
