--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,18 +2,27 @@
 
 export(create_gsheet_db)
 export(create_sqlite_db)
+export(gsheet_get_db)
 export(login_UI)
 export(login_server)
 export(password_reset_UI)
 export(register_UI)
-export(use_language)
+export(sqlite_get_db)
 import(DBI)
 import(RSQLite)
 import(googlesheets4)
 import(shiny)
 importFrom(DBI,dbConnect)
+importFrom(DBI,dbDisconnect)
 importFrom(R6,R6Class)
 importFrom(RSQLite,SQLite)
 importFrom(RSQLite,dbDisconnect)
 importFrom(RSQLite,dbExecute)
+importFrom(dplyr,arrange)
+importFrom(dplyr,collect)
+importFrom(dplyr,group_by)
+importFrom(dplyr,mutate)
+importFrom(dplyr,slice_head)
+importFrom(dplyr,ungroup)
+importFrom(googlesheets4,read_sheet)
 importFrom(utils,modifyList)
