--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(create_sqlite_db)
 export(gsheet_get_db)
 export(login_UI)
 export(login_server)
+export(logout_button)
 export(password_reset_UI)
 export(register_UI)
 export(sqlite_get_db)
