--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: shiny.reglog
 Title: Optional Login and Registration Module System for ShinyApps
-Version: 0.3.1
+Version: 0.4.0
 Authors@R: 
     person(given = "Michal",
            family = "Kosinski",
@@ -18,13 +18,16 @@ Imports:
 	RSQLite,
 	lubridate
 Suggests:
-	shinydashboard,
-	googledrive,
-	gmailr,
-	emayili
+    shinydashboard,
+    googledrive,
+    gmailr,
+    emayili,
+    knitr,
+    rmarkdown
 License: 
 	GPL-3
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1.9001
+VignetteBuilder: knitr
