Changed the language support

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(login_server)
 export(logout_button)
 export(password_reset_UI)
 export(register_UI)
+export(reglog_txt)
 export(sqlite_get_db)
 import(DBI)
 import(RSQLite)
@@ -15,7 +16,6 @@ import(googlesheets4)
 import(shiny)
 importFrom(DBI,dbConnect)
 importFrom(DBI,dbDisconnect)
-importFrom(R6,R6Class)
 importFrom(RSQLite,SQLite)
 importFrom(RSQLite,dbDisconnect)
 importFrom(RSQLite,dbExecute)
@@ -26,4 +26,3 @@ importFrom(dplyr,mutate)
 importFrom(dplyr,slice_head)
 importFrom(dplyr,ungroup)
 importFrom(googlesheets4,read_sheet)
-importFrom(utils,modifyList)
