--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,12 @@
 export(RegLogConnector)
 export(RegLogConnectorMessage)
 export(RegLogDBIConnector)
+export(RegLogServer)
+export(RegLog_edit_UI)
+export(RegLog_login_UI)
+export(RegLog_register_UI)
+export(RegLog_resetPass_confirm_code_UI)
+export(RegLog_resetPass_send_code_UI)
 export(create_gsheet_db)
 export(create_sqlite_db)
 export(gsheet_get_db)
