--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(RegLogConnector)
 export(RegLogConnectorMessage)
 export(RegLogDBIConnector)
 export(RegLogEmayiliConnector)
+export(RegLogGmailrConnector)
 export(RegLogServer)
 export(RegLog_edit_UI)
 export(RegLog_login_UI)
