vignette and UI tweaks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,11 +6,10 @@ export(RegLogDBIConnector)
 export(RegLogEmayiliConnector)
 export(RegLogGmailrConnector)
 export(RegLogServer)
-export(RegLog_edit_UI)
+export(RegLog_credsEdit_UI)
 export(RegLog_login_UI)
 export(RegLog_register_UI)
-export(RegLog_resetPass_confirm_code_UI)
-export(RegLog_resetPass_send_code_UI)
+export(RegLog_resetPass_UI)
 export(create_gsheet_db)
 export(create_sqlite_db)
 export(gsheet_get_db)
