--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(RegLogDBIConnector)
 export(RegLogEmayiliConnector)
 export(RegLogGmailrConnector)
 export(RegLogServer)
+export(RegLog_DBI_database_create)
 export(RegLog_credsEdit_UI)
 export(RegLog_login_UI)
 export(RegLog_register_UI)
