widen database drivers support

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(RegLog_register_UI)
 export(RegLog_resetPass_UI)
 export(create_gsheet_db)
 export(create_sqlite_db)
+export(db_timestamp)
 export(gsheet_get_db)
 export(login_UI)
 export(login_server)
