--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(create_gsheet_db)
 export(create_sqlite_db)
 export(db_timestamp)
 export(gsheet_get_db)
+export(gsheet_tables_create)
 export(login_UI)
 export(login_server)
 export(logout_button)
