--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(RegLogConnectorMessage)
 export(RegLogDBIConnector)
 export(RegLogEmayiliConnector)
 export(RegLogGmailrConnector)
+export(RegLogGsheetConnector)
 export(RegLogServer)
 export(RegLog_credsEdit_UI)
 export(RegLog_login_UI)
