english modal texts complete

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(RegLog_credsEdit_UI)
 export(RegLog_login_UI)
 export(RegLog_register_UI)
 export(RegLog_resetPass_UI)
+export(RegLog_txt)
 export(create_gsheet_db)
 export(create_sqlite_db)
 export(db_timestamp)
