--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,17 +28,11 @@ export(sqlite_get_db)
 import(DBI)
 import(R6)
 import(RSQLite)
-import(googlesheets4)
 import(shiny)
-importFrom(DBI,dbConnect)
-importFrom(DBI,dbDisconnect)
-importFrom(RSQLite,SQLite)
-importFrom(RSQLite,dbDisconnect)
-importFrom(RSQLite,dbExecute)
 importFrom(dplyr,arrange)
 importFrom(dplyr,collect)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
 importFrom(dplyr,slice_head)
 importFrom(dplyr,ungroup)
-importFrom(googlesheets4,read_sheet)
+importFrom(lifecycle,deprecated)
