--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: shiny.reglog
 Title: Optional Login and Registration Module System for ShinyApps
-Version: 0.5.0.9020
+Version: 0.5.0.9021
 Authors@R: 
     person(given = "Michal",
            family = "Kosinski",
@@ -15,15 +15,18 @@ Description: Package creates UI modules for Login, Register and Password Reset
     with shiny.reglog is designed to be optional: user don't need to be logged-in 
     to access your application, but when logged-in the user data can be used 
     to read from and write to relational databases.
+Depends:
+    shiny,
+    R6
 Imports:
-	shiny,
-	dplyr,
-	scrypt,
-	shinyjs,
-	DBI,
-	googlesheets4,
-	lubridate,
-	uuid
+    dplyr,
+    scrypt,
+    shinyjs,
+    DBI,
+    googlesheets4,
+    lubridate,
+    lifecycle,
+    uuid
 Suggests:
     shinydashboard,
     googledrive,
