--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: shiny.reglog
 Title: Optional Login and Registration Module System for ShinyApps
-Version: 0.5.0.9021
+Version: 0.5.0.9022
 Authors@R: 
     person(given = "Michal",
            family = "Kosinski",
@@ -22,6 +22,7 @@ Imports:
     dplyr,
     scrypt,
     shinyjs,
+    stringi,
     DBI,
     googlesheets4,
     lubridate,
@@ -35,8 +36,7 @@ Suggests:
     RSQLite,
     knitr,
     rmarkdown
-License: 
-	MIT
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
