--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(DBI_tables_create)
 export(RegLogConnector)
 export(RegLogConnectorMessage)
 export(RegLogDBIConnector)
+export(RegLogDemo)
 export(RegLogEmayiliConnector)
 export(RegLogGmailrConnector)
 export(RegLogGsheetConnector)
