documentation changes. Also fixed RegLog_txt bug

--- a/.covrignore
+++ b/.covrignore
@@ -1,5 +1,5 @@
-demo.R
-deprecated_database.R
-deprecated_login_server.R
-deprecated_login_UI.R
-deprecated_texts.R
+R/demo.R
+R/deprecated_database.R
+R/deprecated_login_server.R
+R/deprecated_login_UI.R
+R/deprecated_texts.R
