--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(gsheet_tables_create)
 export(login_UI)
 export(login_server)
 export(logout_button)
+export(mailMessageAttachment)
 export(password_reset_UI)
 export(register_UI)
 export(reglog_txt)
