--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: shiny.reglog
 Title: Optional Login and Registration Module System for ShinyApps
-Version: 0.5.0.
+Version: 0.5.0
 Authors@R: 
     person(given = "Michal",
            family = "Kosinski",
