--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,6 +41,7 @@ Suggests:
     rmarkdown,
     RSQLite,
     shinydashboard,
+    shinytest,
     covr
 License: MIT + file LICENSE
 Encoding: UTF-8
