--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -6,14 +6,12 @@ on:
   pull_request:
     branches: [main, master]
 
-name: R-check-plus-coverage
+name: R-CMD-check
 
 jobs:
   R-CMD-check:
     runs-on: ${{ matrix.config.os }}
-
     name: ${{ matrix.config.os }} (${{ matrix.config.r }})
-
     strategy:
       fail-fast: false
       matrix:
@@ -32,47 +30,16 @@ jobs:
       GMAILR_APP: ${{ secrets.GMAILR_APP }}
       REGLOG_SHEET: ${{ secrets.REGLOG_SHEET }}
       STATISMIKE_GMAIL_PASS: ${{ secrets.STATISMIKE_GMAIL_PASS }}
-
     steps:
       - uses: actions/checkout@v2
-
       - uses: r-lib/actions/setup-pandoc@v1
-
       - uses: r-lib/actions/setup-r@v1
         with:
           r-version: ${{ matrix.config.r }}
           http-user-agent: ${{ matrix.config.http-user-agent }}
           use-public-rspm: true
-
       - uses: r-lib/actions/setup-r-dependencies@v1
         with:
           extra-packages: rcmdcheck
 
       - uses: r-lib/actions/check-r-package@v1
-  
-  test-coverage:
-    runs-on: ubuntu-latest
-    env:
-      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
-      G_SERVICE_ACCOUNT: ${{ secrets.G_SERVICE_ACCOUNT }}
-      G_SERVICE_MAIL: ${{ secrets.G_SERVICE_MAIL }}
-      GMAILR_EMAIL: ${{ secrets.GMAILR_EMAIL }}
-      GMAILR_APP: ${{ secrets.GMAILR_APP }}
-      REGLOG_SHEET: ${{ secrets.REGLOG_SHEET }}
-      STATISMIKE_GMAIL_PASS: ${{ secrets.STATISMIKE_GMAIL_PASS }}
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - uses: r-lib/actions/setup-r@v1
-        with:
-          use-public-rspm: true
-
-      - uses: r-lib/actions/setup-r-dependencies@v1
-        with:
-          extra-packages: covr
-          needs: shinytesting
-
-      - name: Test coverage
-        run: covr::codecov()
-        shell: Rscript {0}
