mongo_create and RegLogMongoConnector init

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(RegLogDemo)
 export(RegLogEmayiliConnector)
 export(RegLogGmailrConnector)
 export(RegLogGsheetConnector)
+export(RegLogMongoConnector)
 export(RegLogServer)
 export(RegLog_credsEdit_UI)
 export(RegLog_login_UI)
@@ -23,6 +24,7 @@ export(login_UI)
 export(login_server)
 export(logout_button)
 export(mailMessageAttachment)
+export(mongo_tables_create)
 export(password_reset_UI)
 export(register_UI)
 export(reglog_txt)
