--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -23,6 +23,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      
+      - if: runner.os == 'macos'
+        run: brew services start mongodb-community
+
+      - if: runner.os == 'linux'
+        run: sudo systemctl restart mongod
 
       - uses: r-lib/actions/setup-r@v1
         with:
