--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -19,6 +19,7 @@ reference:
   - RegLogServer
   - RegLogDBIConnector
   - RegLogGsheetConnector
+  - RegLogMongoConnector
   - RegLogEmayiliConnector
   - RegLogGmailrConnector
 - title: UI components of RegLogSystem
@@ -32,6 +33,7 @@ reference:
 - contents:
   - DBI_tables_create
   - gsheet_tables_create
+  - mongo_tables_create
 - title: Advanced functions and objects 
 - subtitle: Customizing texts
   desc: >- 
@@ -59,4 +61,5 @@ reference:
 - contents:
   - has_concept("gsheet_handler", internal = TRUE)
   - has_concept("DBI_handler", internal = TRUE)
+  - has_conecpt("mongo_handler", internal = TRUE)  
   - has_concept("mail_handler", internal = TRUE)
